--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Skills Neon</title>
+  <title>portifolio</title>
   <!-- Font Awesome CDN -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
@@ -14,7 +14,7 @@
 
 <body>
   <nav class="navbar">
-    <img src="/img/LOGO.png" alt="Logo" class="logo">
+    <img src="/img/logo.png" alt="Logo" class="logo">
     <ul>
       <li><a href="#sobre">Sobre</a></li>
       <li><a href="#projeto">Projeto</a></li>
