--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <nav class="navbar">
-    <img src="/img/logo.png" alt="logo" class="logo">
+    <img src="img/logo.png" alt="logo" class="logo">
     <ul>
       <li><a href="#sobre">Sobre</a></li>
       <li><a href="#projeto">Projeto</a></li>
